--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .container {
     /* max-width: 800px; */
     margin: 0 auto;
-    /* padding: 20px; */
+
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
@@ -23,7 +23,7 @@ header {
 h1 {
     color: #ffffff;
     font-size: 32px;
-    background-color: rgb(0, 0, 0);
+    background-color: #87CBB9;
     padding: 20px;
     margin-top: 0;
 }
@@ -50,6 +50,11 @@ footer {
     margin-top: 30px;
     text-align: center;
     color: #999;
+}
+
+
+.wrap-container{
+    padding: 0 20px;
 }
 
 @media (max-width: 600px) {
